--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.3.1",
+    "next": "12.3.2-canary.29",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -17,8 +17,12 @@
     "@types/node": "18.11.0",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.12",
+    "babel-plugin-inline-react-svg": "^2.0.1",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.8.4"
   }
 }
