logout logic and refactor interface

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,8 @@
       {
         "allow": [
           "warn",
-          "error"
+          "error",
+          "info"
         ]
       }
     ]
